--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,13 +29,14 @@
             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Learn to Drive <i class="fas fa-caret-down"></i></a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="{{ site.github.url }}/driving-lessons-york">Lessons in York</a>
+              <a class="dropdown-item" href="{{ site.github.url }}/covid-19-update">COVID-19 Update</a>
               <a class="dropdown-item" href="{{ site.github.url }}/passplus">Pass Plus</a>
               <a class="dropdown-item" href="{{ site.github.url }}/testimonials/">Testimonials</a>
             </div>
           </li>
           <li class="nav-item submenu dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Instructors 
+              Instructors
             <i class="fas fa-caret-down"></i></a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="{{ site.github.url }}/our-instructors/">Our Instructors</a>
