--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -5,7 +5,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-6">
           <div class="banner_content text-center">
-            <h2>{{page.title}}</h2>
+            <h1 class="text-white">{{page.title}}</h1>
           </div>
         </div>
       </div>
