--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@ layout: default
           <div class="row">
             <div class="col-sm-12 col-md-4">
               <div class="card-img-top">
-                <img src="{{ page.image }}" />
+                <img src="{{ page.image }}" alt="{{page.title}}"/>
               </div>
             </div>
             <div class="col-sm-12 col-md-8">
