--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,8 @@
     <div class="row footer-bottom d-flex justify-content-between">
         <div class="col-lg-4 col-sm-12 footer-social justify-content-left">
           <h3>Get in touch</h3>
-          <a href="https://www.facebook.com/pg/checkmirrors" target="_blank"><i class="ti-facebook"></i></a>
-          <a  id="footModal"><i class="ti-email"></i></a>
+          <a href="https://www.facebook.com/pg/checkmirrors" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a  id="footModal"><i class="fas fa-envelope"></i></a>
           <a href="tel:07821291783"><i class="fa fa-phone animated fadeInUp" data-wow-delay=".1s"></i></a>
         </div>
       <div class="col-md-4 col-xs-12">
@@ -20,7 +20,7 @@
     </div>
     <div class="footer-bottom">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 text-center">
           <p>Copyright &copy; {{ site.title }} {{ site.time | date: "%Y"  }}</p>
         </div>
       </div>
