--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,20 @@
 <footer class="footer-area section_gap">
   <div class="container">
     <div class="row footer-bottom d-flex justify-content-between">
-        <div class="col-lg-4 col-sm-12 footer-social justify-content-left">
+        <div class="col-lg-4 col-sm-12 footer-social text-center my-3">
           <h3>Get in touch</h3>
           <a href="https://www.facebook.com/pg/checkmirrors" target="_blank"><i class="fab fa-facebook-f"></i></a>
           <a  id="footModal"><i class="fas fa-envelope"></i></a>
           <a href="tel:07821291783"><i class="fa fa-phone animated fadeInUp" data-wow-delay=".1s"></i></a>
         </div>
-      <div class="col-md-4 col-xs-12">
+      <div class="col-md-4 col-xs-12 my-3">
+        <p class="pride text-center">
+          <img src="{{site.github.url}}/img/pride-flag.png" alt="Pride and BAME Flag">
+          <span>Supporter of all things Pride and BAME.</span></p>
 
       </div>
-      <div class="col-md-4 col-xs-12">
-        <div class="footer-right">
+      <div class="col-md-4 col-xs-12 my-3">
+        <div class="footer-right text-center">
           <img class="footer-cert" src="{{ site.github.url }}/img/dvsa.png" src="DVSA ADI" width="25%">
           <img class="footer-cert" src="{{ site.github.url }}/img/pass-plus.png" alt="Pass Pluss Certified" width="25%">
           <img class="footer-cert" src="{{ site.github.url }}/img/diamond.png" alt="DIAmond Advanced Motorists" width="25%">
