--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TVRMH7T"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-
+    {% include banner.html %}
     {% include header.html %}
 
 
@@ -19,13 +19,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     {% include footer.html %}
     {% include modals.html %}
-    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    {% include legalMonster.html %}
+
+
     <script src="{{ site.github.url }}/js/jquery-3.2.1.min.js"></script>
     <script src="{{ site.github.url }}/js/popper.js"></script>
     <script src="{{ site.github.url }}/js/bootstrap.min.js"></script>
     <script src="{{ site.github.url }}/js/jquery.background-video.js"></script>
     <script src="{{ site.github.url }}/js/owl.carousel.min.js"></script>
     <script src="{{ site.github.url }}/js/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script src="{{ site.github.url }}/js/theme.js"></script>
     <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
     <!-- <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/5357756.js"></script> -->
