--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,9 @@
     <div class="row footer-bottom d-flex justify-content-between">
         <div class="col-lg-4 col-sm-12 footer-social text-center my-3">
           <h3>Get in touch</h3>
-          <a href="https://www.facebook.com/pg/checkmirrors" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="{{ site.data.siteData.contactDetails.faceBook }}" target="_blank"><i class="fab fa-facebook-f"></i></a>
           <a  id="footModal"><i class="fas fa-envelope"></i></a>
-          <a href="tel:07821291783"><i class="fa fa-phone animated fadeInUp" data-wow-delay=".1s"></i></a>
+          <a href="tel:{{ site.data.siteData.contactDetails.phone }}"><i class="fa fa-phone animated fadeInUp" data-wow-delay=".1s"></i></a>
         </div>
       <div class="col-md-4 col-xs-12 my-3">
         <p class="pride text-center">
