--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,9 +28,9 @@
           <li class="nav-item submenu dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Learn to Drive <i class="fas fa-caret-down" tabindex="1"></i></a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="{{ site.github.url }}/driving-lessons-york" aria-label="Lessons in York">Lessons in York</a>
-              <a class="dropdown-item" href="{{ site.github.url }}/covid-19-update" aria-label="COVID-19 Update">COVID-19 Update</a>
-              <a class="dropdown-item" href="{{ site.github.url }}/passplus" aria-label="Pass Plus">Pass Plus</a>
+              <a class="dropdown-item" href="{{ site.github.url }}/driving-lessons-york/" aria-label="Lessons in York">Lessons in York</a>
+              <a class="dropdown-item" href="{{ site.github.url }}/covid-19-update/" aria-label="COVID-19 Update">COVID-19 Update</a>
+              <a class="dropdown-item" href="{{ site.github.url }}/passplus/" aria-label="Pass Plus">Pass Plus</a>
               <a class="dropdown-item" href="{{ site.github.url }}/testimonials/" aria-label="Testimonials">Testimonials</a>
             </div>
           </li>
