--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -4,7 +4,7 @@
       <div class="col-12">
         <div class="banner-covid-inner">
           <div class="banner-covid-message">
-            <p>Driving lessons currently delayed until December 2nd. <a href="../covid-19-update">Find out more</a> or <a href="../book-now">book your lessons</a> for after the second lockdown.</p>
+            <p>Driving lessons currently delayed until December 2nd. <a href="{{ site.github.url }}/covid-19-update/">Find out more</a> or <a href="{{ site.github.url }}/book-now">book your lessons</a> for after the second lockdown.</p>
           </div>
           <div class="banner-covid-dismiss">
             <button class="btn btn-light btn-sm" id="banner-dismiss" aria-label="dismiss banner">Dismiss <i class="far fa-times-circle"></i></button>
