--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
       </div>
       <div class="col-md-4 col-xs-12 my-3">
         <div class="footer-right text-center">
-          <img class="footer-cert" src="{{ site.github.url }}/img/dvsa.png" src="DVSA ADI" width="25%">
+          <img class="footer-cert" src="{{ site.github.url }}/img/dvsa.png" alt="DVSA ADI" width="25%">
           <img class="footer-cert" src="{{ site.github.url }}/img/pass-plus.png" alt="Pass Pluss Certified" width="25%">
           <img class="footer-cert" src="{{ site.github.url }}/img/diamond.png" alt="DIAmond Advanced Motorists" width="25%">
         </div>
