--- a/_includes/form.html
+++ b/_includes/form.html
@@ -41,7 +41,7 @@
   <div class="form-check">
     <input class="form-check-input" type="checkbox" id="marketCheck" data-status="false">
     <label class="form-check-label" for="marketCheck">
-      <p class="small">Recieve emails from checkmirrors about news & offers.</p>
+      <p class="small">Receive emails from checkmirrors about news & offers.</p>
     </label>
   </div>
   <button class="btn btn-primary btn-responsive" type="submit" id="bookFormSubmit">Submit</button>
