--- a/css/main.scss
+++ b/css/main.scss
@@ -76,10 +76,16 @@ a .title-b {
   color: #0A9444;
 }
 
-h1 .title-a,
-h1 .title-b {
+h1 {
+  .title-a, h1 .title-b {
   font-size: 2.5rem!important;
   font-family: $font-header;
+  }
+  .title-c {
+    display: block;
+    font-size: 24px;
+    color: white;
+  }
 }
 
 .title-a,
@@ -87,6 +93,7 @@ h1 .title-b {
   font-weight: 500;
   -webkit-text-stroke: 1.5px #fff;
 }
+
 
 h2 .title-a,
 h2 .title-b {
@@ -223,6 +230,8 @@ section h2 {
   }
   .card-title {
     height: 42px;
+    font-size: 18px;
+    font-weight: 500;
     .card-title-link {
       color: #002347;
     }
