--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
           <h3>Get in touch</h3>
           <a href="{{ site.data.siteData.contactDetails.faceBook }}" target="_blank"><i class="fab fa-facebook-f"></i></a>
           <a  id="footModal"><i class="fas fa-envelope"></i></a>
-          <a href="tel:{{ site.data.siteData.contactDetails.phone }}"><i class="fa fa-phone animated fadeInUp" data-wow-delay=".1s"></i></a>
+          <a href="tel:{{ site.data.siteData.contactDetails.phone }}"><i class="fa fa-phone" data-wow-delay=".1s"></i></a>
         </div>
       <div class="col-md-4 col-xs-12 my-3">
         <p class="pride text-center">
