--- a/_includes/_passplus/why_passplus_section.html
+++ b/_includes/_passplus/why_passplus_section.html
@@ -7,8 +7,8 @@
       <div class="col-12 col-md-8">
 
           <h2 class="mb-3">{{ page.why_passplus_section.title }}</h2>
-          <div class="text-left">
-            {{ page.why_passplus_section.text }}
+          <div class="">
+            {{ page.why_passplus_section.text | markdownify }}
           </div>
 
       </div>
