--- a/css/main.scss
+++ b/css/main.scss
@@ -156,7 +156,22 @@ section h2 {
     }
   }
 }
-
+.googleReview {
+  text-align: center;
+  background-color: white;
+  box-shadow: 0 6px 18px 0 rgba(9,32,76,.035);
+  border-radius: 12px;
+  .googleReviewImage {
+    width: 60%;
+    display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .googleReviewStars {
+    color: #F9B403;
+  }
+}
 .mb-9 {
   margin-bottom: 40px;
 }
