--- a/_includes/_passplus/passplus_promo.html
+++ b/_includes/_passplus/passplus_promo.html
@@ -3,7 +3,7 @@
     <div class="row justify-content-center text-center">
       <div class="col">
         <div class="jumbotron home-jmbo">
-          <h2>Entire Pass Plus Course Only {{ site.data.siteData.prices.passPlusPrice }}!</h2>
+          <h2>{{ page.passplus_promo_section.text | liquify | markdownify }}</h2>
           <button class="btn btn-primary btn-lg btn-responsive" data-toggle="modal" data-target="#bookFormModal">Book Now</button>
           </div>
         </div>
