--- a/_includes/_passplus/passplus_promo.html
+++ b/_includes/_passplus/passplus_promo.html
@@ -4,7 +4,7 @@
       <div class="col">
         <div class="jumbotron home-jmbo">
           <h2>{{ page.passplus_promo_section.text | liquify | markdownify }}</h2>
-          <button class="btn btn-primary btn-lg btn-responsive" data-toggle="modal" data-target="#bookFormModal">Book Now</button>
+          <button class="btn btn-primary btn-lg btn-responsive" data-toggle="modal" data-target="#bookFormModal">{{ page.passplus_promo_section.button_text }}</button>
           </div>
         </div>
       </div>
