--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,6 +34,9 @@
               <a class="dropdown-item" href="{{ site.github.url }}/testimonials/" aria-label="Testimonials">Testimonials</a>
             </div>
           </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="{{ site.github.url }}/gift-vouchers/" aria-label="Gift Vouchers" tabindex="0">Vouchers</a>
+          </li> -->
           <li class="nav-item submenu dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Instructors
