--- a/css/main.scss
+++ b/css/main.scss
@@ -42,7 +42,9 @@
 @import "footer";
 /*---------------------------------------------------- */
 @import "owl-carousel/owl.carousel.min.css";
-
+@import "https://fonts.googleapis.com/css?family=Anton|Roboto:500";
+@import "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css";
+@import "https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css";
 
 // Our variables
 @mixin media-query($device) {
