--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,7 @@
       <div class="row">
         <div class="col-12 text-center">
           <p>Copyright &copy; {{ site.title }} {{ site.time | date: "%Y"  }}</p>
+          <p>checkmirrors is a trading name of Checkmirrors Ltd.</p>
         </div>
       </div>
     </div>
