--- a/_includes/form.html
+++ b/_includes/form.html
@@ -44,7 +44,7 @@
       <p class="small">Receive emails from checkmirrors about news & offers.</p>
     </label>
   </div>
-  <button class="btn btn-primary btn-responsive" type="submit" id="bookFormSubmit">Submit</button>
+  <button class="primary-btn btn btn-bg btn-responsive" type="submit" id="bookFormSubmit">Submit</button>
   <br>
   <p class="small"><span class="required">*</span> Indicates required fields</p>
 
