--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,8 @@
         <button
           class="navbar-toggler"
           type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent"
           aria-expanded="false"
           aria-label="Toggle navigation"
@@ -26,7 +26,7 @@
             <a class="nav-link" href="{{ site.github.url }}" aria-label="Home" tabindex="0">Home</a>
           </li>
           <li class="nav-item submenu dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Learn to Drive <i class="fas fa-caret-down" tabindex="1"></i></a>
+            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Learn to Drive <i class="fas fa-caret-down" tabindex="1"></i></a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="{{ site.github.url }}/driving-lessons-york/" aria-label="Lessons in York">Lessons in York</a>
               <a class="dropdown-item" href="{{ site.github.url }}/covid-19-update/" aria-label="COVID-19 Update">COVID-19 Update</a>
@@ -38,7 +38,7 @@
             <a class="nav-link" href="{{ site.github.url }}/gift-vouchers/" aria-label="Gift Vouchers" tabindex="0">Vouchers</a>
           </li> -->
           <li class="nav-item submenu dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Instructors
             <i class="fas fa-caret-down"></i></a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -48,7 +48,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <button class="btn btn-primary btn-sm btn-responsive" data-toggle="modal" data-target="#bookFormModal" aria-label="Book now">Book Now</button>
+            <button class="primary-btn btn btn-bg btn-responsive" data-bs-toggle="modal" data-bs-target="#bookFormModal" aria-label="Book now">Book Now</button>
           </li>
         </ul>
         </div>
