--- a/_includes/services_section.html
+++ b/_includes/services_section.html
@@ -23,7 +23,7 @@
               <p class="card-text">
                 {{ section_card.card_text | liquify | markdownify }}
               </p>
-              <a href="{{ site.github.url }}{{ section_card.card_button.button_link }}" class="btn btn-primary btn-block">{{ section_card.card_button.button_text }}</a>
+              <a href="{{ site.github.url }}{{ section_card.card_button.button_link }}" class="primary-btn btn-responsive btn-bg">{{ section_card.card_button.button_text }}</a>
             </div>
           </div>
         </div>
