--- a/css/main.scss
+++ b/css/main.scss
@@ -43,7 +43,7 @@
 /*---------------------------------------------------- */
 @import "owl-carousel/owl.carousel.min.css";
 @import "https://fonts.googleapis.com/css?family=Anton|Roboto:500";
-@import "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css";
+@import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css";
 @import "https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css";
 
 // Our variables
@@ -64,6 +64,7 @@ $primary-text-color: #212121;
 $secondary-text-color: #757575;
 $divider-color: #BDBDBD;
 $background-grey: #F7F9F8;
+$primar-yellow: #fdc632;
 // Font Variables
 $font-header: 'Roboto', sans-serif;
 $font-body: 'Open Sans', sans-serif;
@@ -296,7 +297,12 @@ section h2 {
 .home_banner_area .banner_inner .banner_content p {
   color: white;
 }
-
+.primary-btn {
+  border: 2px solid $primar-yellow;
+}
+.primary-btn.btn-bg:hover {
+  border: 2px solid #002347;
+}
 .btn-primary {
   background-color: #388E3C !important;
   border-color: #388E3C !important;
@@ -342,6 +348,7 @@ ul.home-features {
   background-color: #FFC107;
   border-color: #FFC107;
   color: white;
+  padding-top: 5px;
 }
 .event-link {
   color: #FFC107;
@@ -391,6 +398,9 @@ label.error {
 	width: 100%;
 	height: 100%;
 }
+#busy {
+  display: none;
+}
 @media screen and (max-width: 480px) {
   .nav-item .btn {
     width: 100%;
@@ -424,6 +434,10 @@ label.error {
     width: 100%;
     margin: 0;
     height: 100%;
+  }
+  .model-content {
+    border: none!important;
+    border-radius: 0!important;
   }
 }
 .pride {
