--- a/_layouts/info-page.html
+++ b/_layouts/info-page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% include hero.html %}
 
-<section class="container mt-4">
+<section class="container my-4">
   <div class="row">
     <div class="col-8">
       <article class="post clear-bg" itemscope itemtype="http://schema.org/BlogPosting">
@@ -33,4 +33,34 @@ layout: default
       </div>
     </div>
   </div>
+</section>
+
+<section>
+    <div class="row">
+
+
+      {% case page.part %}
+        {% when 1 %}
+        <div class="col">
+          <a href="#">Explore part 2</a>
+        </div>
+        <div class="col">
+          <a href="#">Explore part 3</a>
+        </div>
+        {% when 2 %}
+        <div class="col">
+          <a href="#">Explore part 1</a>
+        </div>
+        <div class="col">
+          <a href="#">Explore part 3</a>
+        </div>
+        {% when 3 %}
+        <div class="col">
+          <a href="#">Explore part 1</a>
+        </div>
+        <div class="col">
+          <a href="#">Explore part 2</a>
+        </div>
+      {% endcase %}
+    </div>
 </section>
