--- a/_includes/blocks/whats-included.html
+++ b/_includes/blocks/whats-included.html
@@ -1,4 +1,4 @@
-<section>
+<section id="get-in-touch">
   <div class="section_gap registration_area">
     <div class="container">
       <div class="row align-items-center justify-content-center">
