--- a/_layouts/info-page.html
+++ b/_layouts/info-page.html
@@ -23,6 +23,7 @@ layout: default
               <input class="form-control mb-3" name="number" id="instructPhone" placeholder="Your Phone Number" type="tel" />
               <input class="form-control mb-3" name="email" id="instructEmail" placeholder="Your Email Address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" type="email" />
               <textarea name="comments" class="form-control" id="instructComments" placeholder="Any comments" rows="3"></textarea>
+              <input id="pageUrl" type="hidden" name="weburl">
             </div>
             <div class="col-lg-12 text-center">
               <div id="instructDone"></div>
