--- a/css/main.scss
+++ b/css/main.scss
@@ -401,6 +401,12 @@ label.error {
 	width: 100%;
 	height: 100%;
 }
+.hs-button {
+  background-color: #fdc632!important;
+}
+.hubspot-link__container {
+  display: none;
+}
 #busy {
   display: none;
 }
