--- a/_includes/_becomeinstructor/whats_included_section.html
+++ b/_includes/_becomeinstructor/whats_included_section.html
@@ -25,6 +25,7 @@
                   <input class="form-control mb-3" name="name" id="instructName" placeholder="Your Name" type="text" />
                   <input class="form-control mb-3" name="number" id="instructPhone" placeholder="Your Phone Number" type="tel" />
                   <input class="form-control mb-3" name="email" id="instructEmail" placeholder="Your Email Address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" type="email" />
+                  <input id="pageUrl" type="hidden" name="weburl">
                   <textarea name="comments" class="form-control" id="instructComments" placeholder="Any comments" rows="3"></textarea>
                 </div>
                 <div class="col-lg-12 text-center">
