--- a/_includes/form.html
+++ b/_includes/form.html
@@ -25,17 +25,88 @@
     <label for="contactNumber">Contact number<span class="required">*</span></label>
     <input type="tel" name="phone" class="form-control" id="contactNumber" placeholder="mobile or landline" required>
   </div>
-  <label for="startDate">Preferred start date</label>
-  <div class="form-group input-group mb-3" id="startDateGroup">
-    <input autocomplete="off" name="start_date" class="form-control" id="startDate"/>
-    <div class="input-group-append" id="datePickerIcon">
-         <div class="input-group-text"><i class="far fa-calendar-alt"></i></div>
+  <div class="row">
+    <div class="col-12 col-sm-4">
+    <label for="startDate">Preferred start date</label>
+    <div class="form-group input-group mb-3" id="startDateGroup">
+      <input autocomplete="off" name="start_date" class="form-control" id="startDate"/>
+      <div class="input-group-append" id="datePickerIcon">
+           <div class="input-group-text"><i class="far fa-calendar-alt"></i></div>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-sm-4">
+    <label for="availableDays">Available Days</label>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="false" id="availMonday">
+      <label class="form-check-label" for="availMonday">
+        Monday
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="false" id="availTuesday">
+      <label class="form-check-label" for="availTuesday">
+        Tuesday
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="false" id="availWednesday">
+      <label class="form-check-label" for="availWednesday">
+        Wednesday
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="false" id="availThursday">
+      <label class="form-check-label" for="availThursday">
+        Thursday
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="false" id="availFriday">
+      <label class="form-check-label" for="availFriday">
+        Friday
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="false" id="availSaturday">
+      <label class="form-check-label" for="availSaturday">
+        Saturday
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="false" id="availSunday">
+      <label class="form-check-label" for="availSunday">
+        Sunday
+      </label>
+    </div>
+  </div>
+  <div class="col-12 col-sm-4">
+    <label for="availableTimes">Available times</label>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="availMornings">
+      <label class="form-check-label" for="availMornings">
+        Mornings
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="availAfternoons">
+      <label class="form-check-label" for="availAfternoons">
+        Afternoons
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="availEvenings">
+      <label class="form-check-label" for="availEvenings">
+        Evenings
+      </label>
+    </div>
     </div>
   </div>
   <div class="form-group">
     <label for="comments">Any comments</label>
     <textarea name="comments" class="form-control" id="comments" rows="3"></textarea>
   </div>
+  <input id="pageUrl" type="hidden" name="weburl">
   <p>Data Privacy</p>
   <p class="small">Checkmirrors values your data privacy. We will only ever use your data to contact you about specific enquiries made unless otherwise agreed. Your data will never be disclosed to or used by another business or external third party. By clicking submit, you agree to allow checkmirrors to contact you about your above enquiry.</p>
   <div class="form-check">
