--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -6,7 +6,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        {% include form.html %}
+        {% include form2.html %}
       </div>
     </div>
   </div>
