--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -8,3 +8,4 @@
 <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
 <!-- <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/5357756.js"></script> -->
 <script src="{{github.site.url}}/js/scripts.js" type="text/javascript"></script>
+<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/5357756.js"></script>
