--- a/_includes/_passplus/passplus_promo.html
+++ b/_includes/_passplus/passplus_promo.html
@@ -3,7 +3,7 @@
     <div class="row justify-content-center text-center">
       <div class="col">
         <div class="jumbotron home-jmbo">
-          <h2>{{ page.passplus_promo_section.text | liquify | markdownify }}</h2>
+          <h2>{{ page.passplus_promo_section.text | markdownify }}</h2>
           <button class="primary-btn btn-bg btn" data-bs-toggle="modal" data-bs-target="#bookFormModal">{{ page.passplus_promo_section.button_text }}</button>
           </div>
         </div>
