--- a/_includes/services_section.html
+++ b/_includes/services_section.html
@@ -21,7 +21,7 @@
             <div class="card-body">
               <h4 class="card-title"><a>{{ section_card.card_title }}</a></h4>
               <p class="card-text">
-                {{ section_card.card_text | liquify | markdownify }}
+                {{ section_card.card_text | markdownify }}
               </p>
               <a href="{{ site.github.url }}{{ section_card.card_button.button_link }}" class="primary-btn btn-responsive btn-bg">{{ section_card.card_button.button_text }}</a>
             </div>
