--- a/_includes/blocks/three-cards.html
+++ b/_includes/blocks/three-cards.html
@@ -10,7 +10,7 @@
     <div class="col-md-3 col-xs-12">
       <div class="card mb-3">
         <div class="card-img-top">
-          <img src="{{ site.github.url }}{{ card.card_image }}" alt="Our fleet">
+          <img src="{{ site.cloudinary_url }}{{ card.card_image }}" alt="{{ card.card_title }}">
         </div>
         <div class="card-body">
           <h4 class="card-title"><a>{{ card.card_title }}</a></h4>
