--- a/_includes/services_section.html
+++ b/_includes/services_section.html
@@ -16,7 +16,7 @@
         <div class="col-md-4 col-xs-12">
           <div class="card mb-3">
             <div class="card-img-top">
-              <img src="{{ site.github.url }}{{ section_card.card_image }}" alt="Our fleet">
+              <img src="{{ site.cloudinary_url }}{{ section_card.card_image }}" alt="{{ section_card.card_title }}">
             </div>
             <div class="card-body">
               <h4 class="card-title"><a>{{ section_card.card_title }}</a></h4>
