--- a/_includes/_passplus/alumni_section.html
+++ b/_includes/_passplus/alumni_section.html
@@ -7,7 +7,7 @@
         <div class="row no-gutters">
           <div class="col-md-4">
             <div class="card-img new-rounded">
-              <img src="{{ site.github.url }}{{ alumni.image.image }}" alt="{{ alumni.image.image_alt }}">
+              <img src="{{ site.cloudinary_url }}{{ alumni.image.image }}" alt="{{ alumni.image.image_alt }}">
             </div>
           </div>
           <div class="col-md-8">
