--- a/_includes/_passplus/why_passplus_section.html
+++ b/_includes/_passplus/why_passplus_section.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row text-center text-md-left">
       <div class="col-12 col-md-4">
-        <img class="img-fluid" src="{{ site.github.url }}{{ page.why_passplus_section.image.image }}" alt="{{ page.why_passplus_section.image.image_alt}}">
+        <img class="img-fluid" src="{{ site.cloudinary_url }}{{ page.why_passplus_section.image.image }}" alt="{{ page.why_passplus_section.image.image_alt}}">
       </div>
       <div class="col-12 col-md-8">
           <h2 class="mb-3">{{ page.why_passplus_section.title }}</h2>
