--- a/_includes/instructors.html
+++ b/_includes/instructors.html
@@ -5,7 +5,7 @@
     <div class="row no-gutters">
       <div class="col-md-4">
         <div class="card-img new-rounded">
-          <img src="{{ site.github.url }}{{ instructor.instructor_image }}" alt="{{ instructor.instructor_name }}">
+          <img src="{{ site.cloudinary_url }}{{ instructor.instructor_image }}" alt="{{ instructor.instructor_name }}">
         </div>
       </div>
       <div class="col-md-8">
