--- a/_includes/blocks/three-cards.html
+++ b/_includes/blocks/three-cards.html
@@ -18,7 +18,7 @@
             {{ card.card_text | markdownify }}
           </p>
           <div class="d-grid gap-2">
-          <a href="{{ site.github.url }}/{{ card.card_button.button_link }}" class="primary-btn btn-bg btn-block">{{ card.card_button.button_text }}</a>
+          <a href="{{ site.github.url }}{{ card.card_button.button_link }}" class="primary-btn btn-bg btn-block">{{ card.card_button.button_text }}</a>
         </div>
         </div>
       </div>
