new contact form

--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -8,7 +8,7 @@
         </button>
       </div>
       <div class="modal-body">
-        {% include form.html %}
+        {% include form2.html %}
       </div>
     </div>
   </div>
