close to final revision

--- a/_includes/_lessons/pass_plus_section.html
+++ b/_includes/_lessons/pass_plus_section.html
@@ -6,7 +6,7 @@
         <div class="clock_sec">
           {{ page.pass_plus_section.text | markdownify }}
         </div>
-        <a class="btn btn-primary btn-lg" href="{{ page.pass_plus_section.cta.button_link }}">{{ page.pass_plus_section.cta.button_text }}</a>
+        <a class="primary-btn btn-bg" href="{{ page.pass_plus_section.cta.button_link }}">{{ page.pass_plus_section.cta.button_text }}</a>
       </div>
     </div>
     <div class="col-12 col-sm-12 col-md-4">
