--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <button class="btn btn-primary btn-sm btn-responsive" data-toggle="modal" data-target="#bookFormModal" aria-label="Book now">Book Now</button>
+            <button class="primary-btn btn-bg btn-responsive" data-toggle="modal" data-target="#bookFormModal" aria-label="Book now">Book Now</button>
           </li>
         </ul>
         </div>
