--- a/_sass/_button.scss
+++ b/_sass/_button.scss
@@ -9,6 +9,7 @@
   font-weight: 500;
   line-height: 50px;
   border-radius: 5px;
+  border: none !important;
   outline: none !important;
   text-align: center;
   text-transform: uppercase;
