--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -14,7 +14,7 @@
         margin-right: 45px;
         .nav-link {
           font: 500 16px/80px $primary-font;
-          text-transform: capitalize;
+          text-transform: uppercase;
           color: white;
           padding: 0px;
           display: inline-block;
