--- a/_includes/_lessons/intro_section.html
+++ b/_includes/_lessons/intro_section.html
@@ -11,7 +11,7 @@
           <div class="card-body">
             <h2 class="mb-9">{{ page.intro_section.heading }}</h2>
             <p class="mb-9">{{ page.intro_section.text | markdownify }}</p>
-            <a class="primary-btn mt-1" href="{{ site.github.url }}{{ page.intro_section.cta.button_link }}">{{ page.intro_section.cta.button_text }} <i class="ti-arrow-right ml-1"></i></a>
+            <a class="primary-btn btn-bg mt-1" href="{{ site.github.url }}{{ page.intro_section.cta.button_link }}">{{ page.intro_section.cta.button_text }} <i class="ti-arrow-right ml-1"></i></a>
           </div>
         </div>
       </div>
