--- a/_includes/become-an-insturctor-promo.html
+++ b/_includes/become-an-insturctor-promo.html
@@ -5,7 +5,7 @@
       <div class="col"></div>
       <div class="col-5">
         <h3>Become an Instructor Today!</h3>
-        <a class="btn btn-primary" href="{{ site.github.url }}/become-an-instructor/">Find out how</a>
+        <a class="primary-btn btn-bg" href="{{ site.github.url }}/become-an-instructor/">Find out how</a>
       </div>
       <div class="col"></div>
     </div>
