--- a/css/main.scss
+++ b/css/main.scss
@@ -199,6 +199,9 @@ section h2 {
 .header_area.navbar_fixed .title-tagline {
   color: black;
 }
+.navbar .nav .nav-item .nav-link {
+  text-transform: uppercase;
+}
 .header_area.navbar_fixed .navbar .nav .nav-item .nav-link {
   color: black;
 }
@@ -413,6 +416,10 @@ label.error {
 
   .footer-cert {
     display: none;
+  }
+
+  .primary-btn {
+    border: 0!important;
   }
 
   .btn-responsive {
