--- a/css/main.scss
+++ b/css/main.scss
@@ -216,7 +216,7 @@ section h2 {
     margin-left: 10px;
 }
 .home_banner_area {
-  background-image: url("{{site.github.url}}/img/home-new2.jpg");
+  background-image: url("https://res.cloudinary.com/njh101010/image/upload/f_webp,q_auto/v1637675034/checkmirrors/home-new2.webp");
   color: white;
 }
 
