Image Optimisation Phase1

--- a/_includes/_lessons/pass_plus_section.html
+++ b/_includes/_lessons/pass_plus_section.html
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="col-12 col-sm-12 col-md-4">
-      <img class="img-fluid" src="{{ site.github.url }}{{ page.pass_plus_section.image.image }}" alt="{{ page.pass_plus_section.image.image_alt }}">
+      <img class="img-fluid" src="{{ page.pass_plus_section.image.image }}" alt="{{ page.pass_plus_section.image.image_alt }}">
     </div>
   </div>
 </div>
