--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,7 +11,7 @@
         </div>
       </div>
       <div class="col-lg-4 offset-lg-1">
-        <img src="{{ site.github.url }}{{ page.about_section.image }}" class="about-image" alt="checkmirrors cars">
+        <img src="{{ page.about_section.image }}" class="about-image" alt="checkmirrors cars">
       </div>
     </div>
   </div>
