--- a/_includes/testimonials_section.html
+++ b/_includes/testimonials_section.html
@@ -13,7 +13,7 @@
         <div class="testi_item">
           <div class="card mb-3">
             <div class="card-img-top">
-              <img class="" src="{{site.github.url}}{{ testimonial.testimonial_image }}" alt="{{ testimonial.name }} testimonial image">
+              <img class="" src="{{ testimonial.testimonial_image }}" alt="{{ testimonial.name }} testimonial image">
             </div>
             <div class="card-body">
               <h4 class="card-title">{{ testimonial.name }}</h4>
