--- a/css/main.scss
+++ b/css/main.scss
@@ -327,7 +327,7 @@ ul.home-features {
   list-style: none;
 }
 .banner_area {
-  background-image: url('{{site.github.url}}/img/home-new.jpeg');
+  background-image: url('https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637675034/checkmirrors/home-new.webp');
   background-size: cover;
   background-repeat: no-repeat;
   h1 {
