--- a/_includes/_lessons/intro_section.html
+++ b/_includes/_lessons/intro_section.html
@@ -3,7 +3,7 @@
     <div class="row h_blog_item">
       <div class="col-lg-6">
         <div class="h_blog_img">
-          <img class="img-fluid" src="{{site.github.url}}{{ page.intro_section.image }}" alt="Checkmirrors cars" />
+          <img class="img-fluid" src="{{ page.intro_section.image }}" alt="Checkmirrors cars" />
         </div>
       </div>
       <div class="col-lg-6">
