--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,15 +9,15 @@
         </div>
       <div class="col-md-4 col-xs-12 my-3">
         <p class="pride text-center">
-          <img src="{{site.github.url}}/img/pride-flag.png" alt="Pride and BAME Flag">
+          <img src="https://res.cloudinary.com/njh101010/image/upload/q_auto/v1653654927/checkmirrors/pride-flag.webp" alt="Pride and BAME Flag">
           <span>Supporter of all things Pride and BAME.</span></p>
 
       </div>
       <div class="col-md-4 col-xs-12 my-3">
         <div class="footer-right text-center">
-          <img class="footer-cert" src="{{ site.github.url }}/img/dvsa.png" alt="DVSA ADI" width="25%">
-          <img class="footer-cert" src="{{ site.github.url }}/img/pass-plus.png" alt="Pass Pluss Certified" width="25%">
-          <img class="footer-cert" src="{{ site.github.url }}/img/diamond.png" alt="DIAmond Advanced Motorists" width="25%">
+          <img class="footer-cert" src="https://res.cloudinary.com/njh101010/image/upload/q_auto/v1653654843/checkmirrors/dvsa.webp" alt="DVSA ADI" width="25%">
+          <img class="footer-cert" src="https://res.cloudinary.com/njh101010/image/upload/q_auto/v1637594586/checkmirrors/pass-plus_o3d744.webp" alt="Pass Pluss Certified" width="25%">
+          <img class="footer-cert" src="https://res.cloudinary.com/njh101010/image/upload/q_auto/v1653654762/checkmirrors/diamond.webp" alt="DIAmond Advanced Motorists" width="25%">
         </div>
       </div>
     </div>
