Optimisations, including removing jquery

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
         <div class="col-lg-4 col-sm-12 footer-social text-center my-3">
           <h3>Get in touch</h3>
           <a href="{{ site.data.siteData.contactDetails.faceBook }}" target="_blank"><i class="fab fa-facebook-f"></i></a>
-          <a  id="footModal"><i class="fas fa-envelope"></i></a>
+          <a  id="footModal" data-bs-toggle="modal" data-bs-target="#bookFormModal"><i class="fas fa-envelope"></i></a>
           <a href="tel:{{ site.data.siteData.contactDetails.phone }}"><i class="fa fa-phone" data-wow-delay=".1s"></i></a>
         </div>
       <div class="col-md-4 col-xs-12 my-3">
