--- a/_includes/_lessons/offers_section.html
+++ b/_includes/_lessons/offers_section.html
@@ -1,13 +1,4 @@
-<section class="popular_courses clear-bg section_gap_top">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-5">
-        <div class="text-center mb-5">
-          <h2 class="mb-3">{{ page.offers_section.heading }}</h2>
-          <p>{{ page.offers_section.sub_heading }}</p>
-        </div>
-      </div>
-    </div>
+
     <div class="row">
       <!-- single course -->
       <div class="col-lg-12">
@@ -23,6 +14,58 @@
             </div>
           </div>
           {% endfor %}
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="popular_courses clear-bg section_gap_top">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-5">
+        <div class="text-center mb-5">
+          <h2 class="mb-3">{{ page.offers_section.heading }}</h2>
+          <p>{{ page.offers_section.sub_heading }}</p>
+        </div>
+      </div>
+    </div>
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+
+        <div class="carousel-item active">
+          <div class="row d-flex justify-content-center">
+            {% for item in page.offers_section.offers limit: 3 %}
+            <div class="col-12 col-md-4">
+              <div class="card">
+                <div class="card-img-top">
+                  <img class="img-fluid" src="{{ item.image }}" alt="{{ item.heading}}" />
+                </div>
+                <div class="card-body">
+                  <h4 class="mb-3">{{ item.heading }}</h4>
+                  <p>{{ item.text }}</p>
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="row d-flex justify-content-center">
+            {% for item in page.offers_section.offers limit: 3 offset: continue %}
+            <div class="col-12 col-md-4">
+              <div class="card">
+                <div class="card-img-top">
+                  <img class="img-fluid" src="{{ item.image }}" alt="{{ item.heading}}" />
+                </div>
+                <div class="card-body">
+                  <h4 class="mb-3">{{ item.heading }}</h4>
+                  <p>{{ item.text }}</p>
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+          </div>
         </div>
       </div>
     </div>
