--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <button class="primary-btn btn-bg btn-responsive" data-bs-toggle="modal" data-bs-target="#bookFormModal" aria-label="Book now">Book Now</button>
+            <button class="primary-btn btn-bg btn-responsive mb-3 mb-sm-3 mb-md-0" data-bs-toggle="modal" data-bs-target="#bookFormModal" aria-label="Book now">Book Now</button>
           </li>
         </ul>
         </div>
