--- a/_includes/testimonials_section.html
+++ b/_includes/testimonials_section.html
@@ -8,30 +8,26 @@
       </div>
     </div>
     <div class="row">
-      <div class="testi_slider owl-carousel">
-        {% for testimonial in page.testimonial_section.testimonials  %}
-        <div class="testi_item">
-          <div class="card mb-3">
-            <div class="card-img-top">
-              <img class="" src="{{ testimonial.testimonial_image }}" alt="{{ testimonial.name }} testimonial image">
-            </div>
-            <div class="card-body">
-              <h4 class="card-title">{{ testimonial.name }}</h4>
-              <p class="card-text">
-                {{ testimonial.testimonial_text }}
-              </p>
+          {% for testimonial in page.testimonial_section.testimonials  %}
+          <div class="col-12 col-md-3">
+            <div class="card mb-3 mx-2">
+              <div class="card-img-top">
+                <img class="" src="{{ testimonial.testimonial_image }}" alt="{{ testimonial.name }} testimonial image">
+              </div>
+              <div class="card-body">
+                <h4 class="card-title">{{ testimonial.name }}</h4>
+                <p class="card-text">{{ testimonial.testimonial_text }}</p>
+              </div>
             </div>
           </div>
-        </div>
-        {% endfor %}
-      </div>
-    </div>
+          {% endfor %}
+        </div>       
     <div class="row">
-        <div class="col-lg-12">
-          <div class="text-right">
-            <a href="{{site.github.url}}/testimonials/" class="event-link">View more <i class="fas fa-arrow-right"></i></a>
-          </div>
+      <div class="col-lg-12">
+        <div class="text-right">
+          <a href="{{site.github.url}}/testimonials/" class="event-link">View more <i class="fas fa-arrow-right"></i></a>
         </div>
+      </div>
     </div>
   </div>
 </section>
