--- a/_includes/_lessons/offers_section.html
+++ b/_includes/_lessons/offers_section.html
@@ -1,25 +1,3 @@
-
-    <div class="row">
-      <!-- single course -->
-      <div class="col-lg-12">
-        <div class="owl-carousel driving_features">
-          {% for offer in page.offers_section.offers %}
-          <div class="card">
-            <div class="card-img-top">
-              <img class="img-fluid" src="{{ offer.image }}" alt="Picture of a gearstick" />
-            </div>
-            <div class="card-body">
-              <h4 class="mb-3">{{ offer.heading }}</h4>
-              <p>{{ offer.text }}</p>
-            </div>
-          </div>
-          {% endfor %}
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
 <section class="popular_courses clear-bg section_gap_top">
   <div class="container">
     <div class="row justify-content-center">
@@ -30,9 +8,8 @@
         </div>
       </div>
     </div>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselServices" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
-
         <div class="carousel-item active">
           <div class="row d-flex justify-content-center">
             {% for item in page.offers_section.offers limit: 3 %}
