--- a/css/main.scss
+++ b/css/main.scss
@@ -41,8 +41,7 @@
 /*----------------------------------------------------*/
 @import "footer";
 /*---------------------------------------------------- */
-@import "owl-carousel/owl.carousel.min.css";
-@import "https://fonts.googleapis.com/css?family=Anton|Roboto:500";
+@import "https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap";
 @import "https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css";
 
 // Our variables
@@ -65,10 +64,15 @@ $divider-color: #BDBDBD;
 $background-grey: #F7F9F8;
 // Font Variables
 $font-header: 'Roboto', sans-serif;
-$font-body: 'Open Sans', sans-serif;
+$font-body: 'Roboto', sans-serif;
 /* Custom CSS */
 body {
   background-color: $background-grey;
+  font-family: $font-body;
+}
+h1,h2,h3,h4,h5,h6 {
+  font-family: $font-header;
+  font-weight: 500;
 }
 .title-a,
 a .title-a {
