--- a/_includes/book-promo-dark.html
+++ b/_includes/book-promo-dark.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-center mt-3">
     <div class="col-lg-8">
       <div class="text-center mb-3">
-        <h2 class="mb-3">Book from only {{ site.data.siteData.prices.pricePerLesson }} per hour or 10 lessons for {{ site.data.siteData.prices.priceForTen }}</h2>
+        <h2 class="mb-3">Book from only {{ site.data.siteData.prices.pricePerLesson }} per hour manual or {{ site.data.siteData.prices.pricePerAuto }} per hour automatic.</h2>
         <button class="primary-btn btn-bg btn-lg" data-bs-toggle="modal" data-bs-target="#bookFormModal">Book Now</button>
       </div>
     </div>
