--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,6 +26,7 @@
         <div class="col-12 text-center">
           <p>Copyright &copy; {{ site.title }} {{ site.time | date: "%Y"  }}</p>
           <p>checkmirrors is a trading name of Checkmirrors Ltd.</p>
+          <p>{{ site.disclaimer }}</p>
         </div>
       </div>
     </div>
